changes for Gui update panels