@@ -1,14 +1,14 @@
-import java.util.ArrayDeque;
+import java.util.ArrayList;
 
 public class ParIndEvent implements Event{
-	public ArrayDeque<Competitor> startQueue;// = new ArrayDeque<Competitor>();
-	public ArrayDeque<Competitor> finishQueue;// = new ArrayDeque<Competitor>();
-	public ArrayDeque<Competitor> completed;// = new ArrayDeque<Competitor>();
+	public ArrayList<Competitor> startQueue;// = new ArrayDeque<Competitor>();
+	public ArrayList<Competitor> finishQueue;// = new ArrayDeque<Competitor>();
+	public ArrayList<Competitor> completed;// = new ArrayDeque<Competitor>();
 	
 	public ParIndEvent(){
-		startQueue = new ArrayDeque<Competitor>();
-		finishQueue = new ArrayDeque<Competitor>();
-		completed = new ArrayDeque<Competitor>();
+		startQueue = new ArrayList<Competitor>();
+		finishQueue = new ArrayList<Competitor>();
+		completed = new ArrayList<Competitor>();
 	}
 	
 	// if the start queue of the race is not empty
@@ -26,7 +26,7 @@ public class ParIndEvent implements Event{
 	@Override
 	public void start() {
 		if(!startQueue.isEmpty()){
-			Competitor temp=startQueue.remove();
+			Competitor temp=startQueue.remove(0);
 			temp.setStartTime(Time.systemTime.getRunningTime());
 			finishQueue.add(temp);
 		}
@@ -38,7 +38,7 @@ public class ParIndEvent implements Event{
 	@Override
 	public void finish() {
 		if(!finishQueue.isEmpty()){
-			Competitor temp=finishQueue.remove();
+			Competitor temp=finishQueue.remove(0);
 			temp.setFinishTime(Time.systemTime.getRunningTime());
 			completed.add(temp);
 		}
@@ -46,13 +46,13 @@ public class ParIndEvent implements Event{
 	@Override
 	public void dnf(){
 		Competitor temp;
-		temp=finishQueue.remove();
+		temp=finishQueue.remove(0);
 		temp.dnf=true;
 		completed.add(temp);
 	}
 	@Override
 	public void cancel(){
-		startQueue.addFirst(finishQueue.removeLast());
+		startQueue.add(0,finishQueue.remove(finishQueue.size()-1));
 	}
 	@Override
 	public void clear(int num){
@@ -67,7 +67,28 @@ public class ParIndEvent implements Event{
 		return "PARIND";
 	}
 	@Override
-	public ArrayDeque<Competitor> getCompleted(){
+	public ArrayList<Competitor> getCompleted(){
 		return completed;
+	}
+	public String displayUI(){
+		String starting="Racers Queued\n- - - - - - - - - - - - - - - - - - - - -";
+		for(int i=1; i>-1;i--){
+			if(startQueue.size()>i)
+				starting=starting+'\n'+startQueue.get(i).getCompetitorNumber()+"\t00:00.00";
+		}
+		starting+=">"+'\n';
+		
+		String running="\nRunning Times\n- - - - - - - - - - - - - - - - - - - - - ";
+		for(int i=0; i<finishQueue.size(); i++){
+			running=running+'\n'+finishQueue.get(i).getCompetitorNumber()+'\t'+String.format("%.2f", (Time.systemTime.getTime()-finishQueue.get(i).getStartTime()));
+		}
+		
+		String finished="\n\nFinished Times\n- - - - - - - - - - - - - - - - - - - - - ";
+		for(int i=1; i<3; i++){
+			if(completed.size()>i-1)
+				finished=finished+"\n"+completed.get(completed.size()-i).getCompetitorNumber()+'\t'+(completed.get(completed.size()-i).dnf ? "DNF":String.format("%.2f", (completed.get(completed.size()-i).getRaceTime())));
+		}
+		
+		return starting+running+finished;
 	}
 }
